fixed lat/lon errors in code

--- a/WeatherCode.ipynb
+++ b/WeatherCode.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "87452403",
+   "execution_count": 1,
+   "id": "668ec94a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4fbe31ae",
+   "id": "b23b7507",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "8edbb376",
+   "execution_count": 3,
+   "id": "15297f60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "        \"lon\": str(lon),\n",
     "        \"start\": \"2011-01-01\",\n",
     "        \"end\": \"2020-02-29\",\n",
-    "        \"alt\": \"184\"\n",
+    "        #\"alt\": \"184\"\n",
     "    }\n",
     "\n",
     "    headers = {\n",
@@ -89,12 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "a988b9e5",
+   "execution_count": 4,
+   "id": "1a66a70e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#these function exports all the json data\n",
     "def export_data_to_json(data, filename):\n",
     "    with open(filename, 'w') as file:\n",
     "        json.dump(data, file)\n",
@@ -113,28 +112,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e1f4ea51",
+   "execution_count": 23,
+   "id": "11383a02",
    "metadata": {},
    "outputs": [],
    "source": [
     "#get data\n",
     "la = get_weather_data(34, 118)\n",
-    "nyc = get_weather_data(40, 73)\n",
     "chi = get_weather_data(41, 87)\n",
     "detroit = get_weather_data(42, 83)\n",
-    "columbus = get_weather_data(40, 83)\n",
-    "philly = get_weather_data(39, 75)\n",
-    "newark = get_weather_data(40, 74)\n",
-    "houston = get_weather_data(29, 95)\n",
-    "indianapolis = get_weather_data(39, 86)\n",
-    "milwaukee = get_weather_data(43, 87)"
+    "milwaukee = get_weather_data(43, 87)\n",
+    "nyc = get_weather_data(40, -73)\n",
+    "columbus = get_weather_data(40, -83)\n",
+    "philly = get_weather_data(39, -75)\n",
+    "newark = get_weather_data(40, -74)\n",
+    "houston = get_weather_data(29, -95)\n",
+    "indianapolis = get_weather_data(39, -86)\n",
+    "milwaukee = get_weather_data(43, -87)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "bb5c51b9",
+   "execution_count": 29,
+   "id": "7f20276a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +153,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "2d933951",
+   "execution_count": 31,
+   "id": "b76b1391",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,8 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "a996203f",
+   "execution_count": 32,
+   "id": "ebd19daf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f55b4474",
+   "id": "546dacd2",
    "metadata": {},
    "outputs": [],
    "source": []
