many code revisions to weathercode, new import code, moved data folders around

--- a/WeatherCode.ipynb
+++ b/WeatherCode.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a434d86",
+   "id": "45ebefc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2a5293e5",
+   "id": "48670679",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "928449c2",
+   "id": "fd9f6bde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,31 +89,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ff097b15",
+   "execution_count": 10,
+   "id": "6f94e365",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Functions for conversion and export\n",
     "def export_data_to_json(data, filename):\n",
     "    with open(filename, 'w') as file:\n",
     "        json.dump(data, file)\n",
     "\n",
     "def export_datasets(datasets):\n",
     "    data_folder = 'data'\n",
+    "    subfolder = 'weather'\n",
     "\n",
     "    # Create 'data' folder if it doesn't exist\n",
     "    if not os.path.exists(data_folder):\n",
     "        os.makedirs(data_folder)\n",
     "\n",
+    "    # Create 'weather' subfolder if it doesn't exist\n",
+    "    weather_folder = os.path.join(data_folder, subfolder)\n",
+    "    if not os.path.exists(weather_folder):\n",
+    "        os.makedirs(weather_folder)\n",
+    "\n",
     "    for dataset_name, dataset in datasets.items():\n",
-    "        filename = os.path.join(data_folder, f\"{dataset_name}_data.json\")\n",
-    "        export_data_to_json(dataset, filename)"
+    "        filename = os.path.join(weather_folder, f\"{dataset_name}_data.json\")\n",
+    "        export_data_to_json(dataset, filename)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ab9a1df6",
+   "id": "0e95b79f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a9db0e52",
+   "execution_count": 6,
+   "id": "ac181fd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,30 +160,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0d715fb2",
+   "execution_count": 7,
+   "id": "208524c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dictionary to hold all datasets to export\n",
     "datasets = {\n",
-    "    'la': la_data,\n",
-    "    'nyc': nyc_data,\n",
-    "    'chi': chi_data,\n",
-    "    'detroit': detroit_data,\n",
-    "    'columbus_oh': columbus_oh_data,\n",
-    "    'philly': philly_data,\n",
-    "    'newark': newark_data,\n",
-    "    'houston': houston_data,\n",
-    "    'indianapolis': indianapolis_data,\n",
-    "    'milwaukee': milwaukee_data\n",
-    "}"
+    "    'Los Angeles': la_data,\n",
+    "    'New York City': nyc_data,\n",
+    "    'Chicago': chi_data,\n",
+    "    'Detroit': detroit_data,\n",
+    "    'Columbus': columbus_oh_data,\n",
+    "    'Philadelphia': philly_data,\n",
+    "    'Newark': newark_data,\n",
+    "    'Houston': houston_data,\n",
+    "    'Indianapolis': indianapolis_data,\n",
+    "    'Milwaukee': milwaukee_data\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e262e804",
+   "execution_count": 11,
+   "id": "b0bf5d6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18f51c0c",
+   "id": "c5aeebf7",
    "metadata": {},
    "outputs": [],
    "source": []
