added relative paths

--- a/Import for JSON Data.ipynb
+++ b/Import for JSON Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "501af216",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,12 @@
     "import glob\n",
     "import os\n",
     "import re\n",
-    "import datetime"
+    "import datetime\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8a0ffbd1",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "64f84d0c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b756972b",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c75ac9ea",
    "metadata": {},
    "outputs": [],
@@ -110,21 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3948b9b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify the directory path where the weather JSON files are located\n",
-    "weather_directory = r'C:\\Users\\abrid\\OneDrive\\Desktop\\Project 3 Folder\\Group-Project-3\\data\\weather'\n",
+    "base_dir = os.getcwd()\n",
     "\n",
-    "# Specify the directory path where the futures JSON files are located\n",
-    "futures_directory = r'C:\\Users\\abrid\\OneDrive\\Desktop\\Project 3 Folder\\Group-Project-3\\data\\futures'"
+    "# Specify the relative directory paths for weather and futures data\n",
+    "weather_directory = os.path.join(base_dir, 'data', 'weather')\n",
+    "futures_directory = os.path.join(base_dir, 'data', 'futures')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c5912a51",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9f8b99b9",
    "metadata": {},
    "outputs": [],
