revised import weather code, json code, etc., added logic-ali for js, added html

--- a/Import for JSON Data.ipynb
+++ b/Import for JSON Data.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "501af216",
+   "execution_count": 1,
+   "id": "baa8ffa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,24 +17,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8a0ffbd1",
+   "execution_count": 2,
+   "id": "a775f4b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to import data from a JSON file\n",
     "def import_weather_data(file_path, schema, collection, city):\n",
     "    with open(file_path) as file:\n",
     "        data = json.load(file)\n",
     "        for item in data:\n",
+    "            # Ensure temperature values are floats\n",
+    "            item['tavg'] = float(item['tavg']) if item['tavg'] else None\n",
+    "            item['tmax'] = float(item['tmax']) if item['tmax'] else None\n",
+    "            item['tmin'] = float(item['tmin']) if item['tmin'] else None\n",
+    "\n",
     "            item['city'] = city\n",
-    "            collection.insert_one(item)"
+    "            collection.insert_one(item)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "64f84d0c",
+   "execution_count": 3,
+   "id": "4de697a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b756972b",
+   "execution_count": 4,
+   "id": "dcb0821f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,17 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c75ac9ea",
+   "execution_count": 5,
+   "id": "b0859b28",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the schema for the weather data\n",
     "weather_schema = {\n",
     "    'date': 'date',\n",
-    "    'tavg_fahrenheit': 'double',\n",
-    "    'tmin_fahrenheit': 'double',\n",
-    "    'tmax_fahrenheit': 'double'\n",
+    "    'tavg': 'float',\n",
+    "    'tmin': 'float',\n",
+    "    'tmax': 'float'\n",
     "}\n",
     "\n",
     "# Define the schema for the futures data\n",
@@ -110,8 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3948b9b8",
+   "execution_count": 6,
+   "id": "18fc54e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c5912a51",
+   "execution_count": 7,
+   "id": "40acbf3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9f8b99b9",
+   "execution_count": 8,
+   "id": "2640a9e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d1ca5a40",
+   "id": "b90c3540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a671fbe",
+   "id": "6354c648",
    "metadata": {},
    "outputs": [],
    "source": []
