fixed data path

--- a/data/WeatherCode.ipynb
+++ b/data/WeatherCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "5bc65e7f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "6a712fb3",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "836f1445",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "b523312c",
    "metadata": {},
    "outputs": [],
@@ -115,15 +115,15 @@
     "        json.dump(data, file)\n",
     "\n",
     "def export_datasets(datasets):\n",
-    "    data_folder = 'data'\n",
+    "    #data_folder = 'data'\n",
     "    subfolder = 'weather'\n",
     "\n",
     "    # Create 'data' folder if it doesn't exist\n",
-    "    if not os.path.exists(data_folder):\n",
-    "        os.makedirs(data_folder)\n",
+    "    #if not os.path.exists(data_folder):\n",
+    "        #os.makedirs(data_folder)\n",
     "\n",
     "    # Create 'weather' subfolder if it doesn't exist\n",
-    "    weather_folder = os.path.join(data_folder, subfolder)\n",
+    "    weather_folder = os.path.join(subfolder)\n",
     "    if not os.path.exists(weather_folder):\n",
     "        os.makedirs(weather_folder)\n",
     "\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "9bbc2dfb",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "6cc19823",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "069c6adb",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "93a54814",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   "kernelspec": {
    "display_name": "PythonData",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
