--- a/data/WeatherCode.ipynb
+++ b/data/WeatherCode.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "5bc65e7f",
+   "execution_count": 9,
+   "id": "f1c85fd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "6a712fb3",
+   "execution_count": 10,
+   "id": "ae02c54b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "836f1445",
+   "execution_count": 11,
+   "id": "16789009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "b523312c",
+   "execution_count": 12,
+   "id": "4ea9683d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "9bbc2dfb",
+   "execution_count": 13,
+   "id": "476ccfd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "6cc19823",
+   "execution_count": 14,
+   "id": "b5384227",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,8 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "069c6adb",
+   "execution_count": 15,
+   "id": "e30537b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,8 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "93a54814",
+   "execution_count": 16,
+   "id": "69acea2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd7a2691",
+   "id": "4f8f24b8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31d31c96",
+   "id": "fd7c1305",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -224,7 +224,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
